# $Id: Makefile.am 3234 2011-02-23 10:25:20Z strk $
#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
SUBDIRS = snapround

EXTRA_DIST =

geosdir = $(includedir)/geos/noding

geos_HEADERS = \
    BasicSegmentString.h \
    FastNodingValidator.h \
    FastSegmentSetIntersectionFinder.h \
    IntersectionAdder.h \
    IntersectionFinderAdder.h \
    IteratedNoder.h \
    MCIndexNoder.h \
    MCIndexNoder.inl \
    MCIndexSegmentSetMutualIntersector.h \
    NodableSegmentString.h \
    NodedSegmentString.h \
    Noder.h \
    NodingValidator.h \
    Octant.h \
    OrientedCoordinateArray.h \
    ScaledNoder.h \
    SegmentIntersectionDetector.h \
    SegmentIntersector.h \
    SegmentNode.h \
    SegmentNodeList.h \
    SegmentPointComparator.h \
    SegmentSetMutualIntersector.h \
    SegmentString.h \
    SegmentString.inl \
    SegmentStringUtil.h \
    SimpleNoder.h \
    SingleInteriorIntersectionFinder.h \
    SinglePassNoder.h
